--- a/iletişim.html
+++ b/iletişim.html
@@ -10,17 +10,65 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <style>
-        body {
-            background-color: rgb(180, 180, 180);
+        @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,600,400italic);
+
+        .iltişim {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            -webkit-box-sizing: border-box;
+            -moz-box-sizing: border-box;
         }
+        .iletişim_form{
+            font-family: "Roboto", Helvetica, Arial, sans-serif;
+            color: #888;
+            background: #79A7A8;
+        }
+        .container2 {
+            max-width: 1000px;
+            width: 100%;
+            margin: 0 auto;
+            position: relative;
+        }
+
+        #contact input[type="text"],
+        #contact input[type="email"],
+        #contact textarea,
+        #contact button[type="submit"] {
+            font: 500 12px/16px "Roboto", Helvetica, Arial, sans-serif;
+        }
+
+        #contact {
+            background: #F9F9F9;
+            padding: 25px;
+            margin: 100px 0;
+            box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+        }
+
+ 
+
+        .form-control {
+            border: none !important;
+            margin: 0 0 10px;
+            min-width: 100%;
+            padding: 0;
+            width: 100%;
+        }
+
+        .form_control{
+            background-color: gray;
+            background-attachment:fixed;
+        }
+
+
     </style>
 </head>
 
 <body>
-    üst menü
+    <!-- üst menü -->
     <nav class="navbar navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="hosgeldiniz.html">Örnek Site</a>
+            <a class="navbar-brand" href="index.html">Örnek Site</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                 data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
                 aria-label="Toggle navigation">
@@ -84,9 +132,7 @@
                         </li>
                     </ul>
                     <form class="d-flex mt-3" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Aramak istediğinizi yazınız"
-                            aria-label="Search">
-                        <button type="button" class="btn btn-outline-success">Ara</button>
+                        <button type="button" class="btn btn-outline-success">Success</button>
                     </form>
                 </div>
             </div>
@@ -95,61 +141,37 @@
 
 
     <!-- iletişim formu -->
-    <div class="container" style="margin-top: 30px;">
-        <form>
-            <fieldset>
-                <h2 style="text-align: center; list-style-type: none;">İletişim Formu</h2>
-                <div class="mb-3">
-                    <input class="form-control" id="exampleFormControlInput1" placeholder="Adınız Soyadınız" type="text"
-                        required>
-                </div>
-                <div class="mb-3">
-                    <input class="form-control" id="exampleFormControlInput1" placeholder="E-Posta Adresiniz"
-                        type="email" required>
-                </div>
-                <div class="mb-3">
-                    <input class="form-control" id="exampleFormControlInput1" type="tel"
-                        placeholder="Telefon Numaranızı Girin" required>
-                </div>
-                <div class="mb-3">
-                    <textarea class="form-control" id="exampleFormControlInput1" id="exampleFormControlTextarea1"
-                        placeholder="Şikayetinizi Buraya Giriniz" required></textarea>
-                </div>
-                <div class="mb-3">
-                    <div id="liveAlertPlaceholder"></div>
-                    <button type="button" class="btn  btn-outline-success" id="liveAlertBtn">Gönder</button>
-                </div>
-            </fieldset>
-        </form>
-
-
-        <script>
-            const alertPlaceholder = document.getElementById('liveAlertPlaceholder')
-            const appendAlert = (message, type) => {
-                const wrapper = document.createElement('div')
-                wrapper.innerHTML = [
-                    `<div class="alert alert-${type} alert-dismissible" role="alert">`,
-                    `   <div>${message}</div>`,
-                    '   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>',
-                    '</div>'
-                ].join('')
-
-                alertPlaceholder.append(wrapper)
-            }
-
-            const alertTrigger = document.getElementById('liveAlertBtn')
-            if (alertTrigger) {
-                alertTrigger.addEventListener('click', () => {
-                    appendAlert('Formunuz Yetkililere Başarıyla Gönderilmiştir', 'success')
-                })
-            }
-            else{
-                alertTrigger.addEventListener('click',() => {
-                    appendAlert('Formunuz İletilemedi Tekrar Deneyin' )
-                })
-            }
-        </script>
+    <body class="form_control">
+    <div class="container" style="margin-top: 30px;">          
+            <div class="container2">
+                <form class="" id="contact" style="font-family:Roboto, Helvetica, Arial, sans-serif; color: #3a3a3a; background: #818c8c;">
+                    <h2 style="text-align: center;"><a href="iletişim.html" style="text-decoration: none; color:#3a3a3a;">İletişim Sayfası</a></h2>
+                    <div class="form-floating mb-3">
+                        <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
+                        <label for="floatingInput">Adınız Soyadınız</label>
+                      </div>
+                      <div class="form-floating">
+                        <input type="email" class="form-control" id="floatingPassword" placeholder="Password">
+                        <label for="floatingPassword">Email Adresi</label>
+                      </div>
+                      <div class="form-floating mb-3">
+                        <input type="text" class="form-control" id="floatingInput" placeholder="Konu">
+                        <label for="floatingInput">Konu</label>
+                      </div>
+                      <div class="form-floating">
+                        <textarea class="form-control" placeholder="Şikayetinizi Buraya yazınız" id="floatingTextarea"></textarea>
+                        <label for="floatingTextarea">Şikayetinizi Buraya Yazınız</label>
+                      </div>
+                      <a href="iletişim.html"><button type="button" class="btn btn-outline-success">Gönder</button></a>
+                </form>
+            </div>
     </div>
+    </div>
+</body>
+
+
+
+
 
 </body>
 
