--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
     </nav>
 
     <!-- slider-->
-    <div class="container mt-5" style="display: flex;">
-      <div id="carouselExampleAutoplaying" style=" width: 700px; margin-top:20px; margin-left:280px; "
+    <div class="container mt-5" style="display: flex; justify-content: center;">
+      <div id="carouselExampleAutoplaying" style=" width: 700px; margin-top:20px;"
         class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
