--- a/ps.html
+++ b/ps.html
@@ -91,8 +91,8 @@
 
 
          <!-- başlangıç katman içerik -->
-         <div class="container mt-5" style="display: flex;">
-          <div id="carouselExampleAutoplaying" style=" width: 700px; margin-top:20px; margin-left:280px; " class="carousel slide" data-bs-ride="carousel">
+         <div class="container mt-5" style="display: flex; justify-content: center;">
+          <div id="carouselExampleAutoplaying" style=" width: 700px; margin-top:20px;" class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img src="resim/until dawn.jpg" class="d-block w-100">
