--- a/yarıs.html
+++ b/yarıs.html
@@ -89,153 +89,138 @@
         </nav>
 
 
-         <!-- başlangıç katman içerik -->
-         <div class="container mt-5" style="display: flex;">
-          <div id="carouselExampleAutoplaying" style=" width: 700px; margin-top:20px; margin-left:280px; " class="carousel slide" data-bs-ride="carousel">
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img src="resim/need for speed.jpg" class="d-block w-100">
-                </div>
-                <div class="carousel-item">
-                  <img src="resim/wrc.jpg" class="d-block w-100">
-                </div>
-                <div class="carousel-item">
-                  <img src="resim/dirt.jpg" class="d-block w-100">
-                </div>
+         <!-- slider -->
+         <div class="container mt-5 d-flex justify-content-center">
+          <div id="carouselExampleAutoplaying" style="max-width: 700px; margin-top: 20px;" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="resim/need for speed.jpg" class="d-block w-100">
               </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-              </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-              </button>
-            </div>
-      </div>
-
-        <!-- ilk katman içerik -->    
-        <div class="container mt-5" style="display: flex;">
-          <div class="card" style="width: 18rem; margin-top: 30px; margin-left:-50px; display: inline-block;">
-              <img src="resim/forza.jpg" class="card-img-top" style="background-color: gray;" alt="...">
-              <div class="card-body" >
-                <h5 class="card-title">Forza Horizon 4</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
+              <div class="carousel-item">
+                <img src="resim/wrc.jpg" class="d-block w-100">
+              </div>
+              <div class="carousel-item">
+                <img src="resim/forza.jpg" class="d-block w-100">
               </div>
             </div>
-
-
-            <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px; margin-left: 100px;">
-              <img src="resim/need for speed.jpg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Need For Speed:Heat</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
-              </div>
-            </div>
-
-            <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-          <img src="resim/dirt.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Dirt Relly 2.0 1</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
-          </div>
-        </div>      
-
-        <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-          <img src="resim/mario.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title"> Mario Kart 8 Deluxe</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
           </div>
         </div>
-      </div>
+
+        <!-- ilk katman içerik -->    
+        <div class="container text-center">
+          <div class="row justify-content-center" style="margin-top: 100px;">
+            <div class="col">
+              <div class="card h-100">
+                <img src="resim/forza.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Forza Horizon 4</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="resim/need for speed.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Need For Speed:Heat</h5>
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="resim/mario.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Mario Kart 8 Deluxe</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                  <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
 
         <!-- İkinci Katman İçerik -->
-        <div class="container mt-5" style="display: flex;">
-            <div class="card" style="width: 18rem; margin-top: 30px; margin-left:-50px; display: inline-block;">
-                <img src="resim/wreckfest.jpg" class="card-img-top" style="background-color: gray;" alt="...">
-                <div class="card-body" >
+        <div class="container text-center">
+          <div class="row justify-content-center" style="margin-top: 100px;">
+            <div class="col">
+              <div class="card h-100">
+                <img src="resim/wreckfest.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
                   <h5 class="card-title">Wreckfest</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
-
-
-              <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px; margin-left: 100px;">
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="resim/f1.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Witcher Wild Hunter 3</h5>
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
                 <img src="resim/gran.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Gran Turismo Sport</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
-
-              <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-            <img src="resim/f1.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">F1 2021</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
-            </div>
-          </div>      
-
-          <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-            <img src="resim/asetto (1).jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Assetto Corsa</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
             </div>
           </div>
         </div>
-        </div>
 
         <!-- Üçüncü Katman İçerik  -->
-        <div class="container mt-5" style="display: flex;">
-            <div class="card" style="width: 18rem; margin-top: 30px; margin-left:-50px; display: inline-block;">
-                <img src="resim/project.jpg" class="card-img-top" style="background-color: gray;" alt="...">
-                <div class="card-body" >
+        <div class="container text-center">
+          <div class="row justify-content-center" style="margin-top: 100px;">
+            <div class="col">
+              <div class="card h-100">
+                <img src="resim/project.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
                   <h5 class="card-title">Project CARS 2</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
-                </div>
-              </div>
-
-              
-              <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px; margin-left: 100px;">
-                <img src="resim/paradies.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Burnout Paradise Remastered</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
-                </div>
-              </div>
-
-              
-              <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-                <img src="resim/wrc.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">WRC 9</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
-                </div>
-              </div>    
-
-              <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-                <img src="resim/roket.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Roket League</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
             </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="resim/wrc.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">WRC 9</h5>
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="resim/roket.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Roket League</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                  <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
 
 
@@ -256,14 +241,6 @@
             </ul>
           </nav>
         </div>
-        </div>
-
-
-
-        <div class="container">
-          <div>
-            dasldşaslmd
-          </div>
         </div>
 </body>
 </html>
