--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Örnek Site</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
 </head>
-
+<style>
+  body{
+    background-image:url(resim/elden\ ring.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+  }
+</style>
 <body>
   <div class="sayfa">
     <!-- üst menü -->
@@ -87,7 +95,7 @@
     </nav>
 
     <!-- slider-->
-    <div class="container mt-5" style="display: flex; justify-content: center;">
+    <div class="container mt-5" style="display: flex; border-style: none; justify-content: center;">
       <div id="carouselExampleAutoplaying" style=" width: 700px; margin-top:20px;"
         class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
@@ -115,9 +123,9 @@
     </div>
 
     <!--İlk Katman İçerik -->
-    <div class="container mt-5" style="display: flex;">
+    <div class="container mt-5" style="display: flex; justify-content: center;">
       <div class="card" style="width: 18rem; margin-top: 30px; margin-left:-50px; display: inline-block;">
-        <img src="resim/god of war.jpg" class="card-img-top" style="background-color: gray;" alt="...">
+        <img src="resim/god of war.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">God Of War</h5>
           <p class="card-text">Spartalı savaşçı ve Eski Yunan savaş Tanrısı Kratos'un Yunan Tanrılarından intikamını almasını konu alan bir oyundur</p>
@@ -174,7 +182,7 @@
       <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px; margin-left: 100px;">
         <img src="resim/alien.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Alien</h5>
+          <h5 class="card-title">Alien:İsolation</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
             content.</p>
           <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
@@ -266,8 +274,7 @@
       </ul>
     </nav>
   </div>
-  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
+ 
 </body>
 
 </html>
