--- a/korku.html
+++ b/korku.html
@@ -151,7 +151,6 @@
           </div>
         </div>
 
-
         <!-- İkinci Katman İçerik --> 
         <div class="container text-center">
           <div class="row justify-content-center" style="margin-top: 100px;">
@@ -169,7 +168,7 @@
               <div class="card h-100">
                 <img src="resim/alien.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Alien</h5>
+                  <h5 class="card-title">Alien:İsolation</h5>
                   <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
