--- a/bilgisayar.html
+++ b/bilgisayar.html
@@ -9,21 +9,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-
-  <style>
-    .box {
-      width: 200px;
-      height: 200px;
-      transition: 1s;
-    }
-
-    .box:hover {
-      transform: scale(1.1);
-      z-index: 1;
-    }
-  </style>
 </head>
-
 <body>
   <div class="sayfa">
     <!-- menü kısmı -->
@@ -133,7 +119,7 @@
 
     <!-- ilk katman içerik -->
     <div class="container mt-5" style="display: flex;">
-      <div class="card box" style="width: 18rem; margin-top: 30px; margin-left:-50px; display: inline-block;">
+      <div class="card" style="width: 18rem; margin-top: 30px; margin-left:-50px; display: inline-block;">
         <img src="resim/doom ethernal.jpg" class="card-img-top" style="background-color: gray;" alt="...">
         <div class="card-body">
           <h5 class="card-title">Doom Ethernal</h5>
@@ -151,7 +137,6 @@
           <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
         </div>
       </div>
-
 
       <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
         <img src="resim/calisto.jpg" class="card-img-top" alt="...">
@@ -186,7 +171,6 @@
         <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
       </div>
     </div>
-
 
     <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px; margin-left: 100px;">
       <img src="resim/outlast.jpg" class="card-img-top" alt="...">
@@ -231,7 +215,6 @@
         <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
       </div>
     </div>
-
 
     <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px; margin-left: 100px;">
       <img src="resim/dying light.jpg" class="card-img-top" alt="...">
