--- a/iletişim.html
+++ b/iletişim.html
@@ -144,7 +144,7 @@
     <body class="form_control">
     <div class="container" style="margin-top: 30px;">          
             <div class="container2">
-                <form class="" id="contact" style="font-family:Roboto, Helvetica, Arial, sans-serif; color: #3a3a3a; background: #818c8c;">
+                <form class="" id="contact" style="font-family:Roboto, Helvetica, Arial, sans-serif; color: #3a3a3a; background: #c7c7c7;">
                     <h2 style="text-align: center;"><a href="iletişim.html" style="text-decoration: none; color:#3a3a3a;">İletişim Sayfası</a></h2>
                     <div class="form-floating mb-3">
                         <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
@@ -168,11 +168,5 @@
     </div>
     </div>
 </body>
-
-
-
-
-
 </body>
-
 </html>
