--- a/yarıs.html
+++ b/yarıs.html
@@ -168,7 +168,7 @@
               <div class="card h-100">
                 <img src="resim/f1.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Witcher Wild Hunter 3</h5>
+                  <h5 class="card-title">F1 2022</h5>
                   <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
